carousel and boxes

--- a/index.html
+++ b/index.html
@@ -91,33 +91,152 @@
 
             </div>
         </header>
-        <section>
-            <div class="second">
-                <div class="second-1">
-                    <div>
-                        <i class="fa fa-bars"></i>
-                        <span>All</span>
+    </div>
+    <section>
+        <div class="second">
+            <div class="second-1">
+                <div>
+                    <i class="fa fa-bars"></i>
+                    <span>All</span>
+
+                </div>
+
+            </div>
+            <div class="second-2">
+                <ul>
+                    <li>Today's Deals</li>
+                    <li>Customer Service</li>
+                    <li>Registry</li>
+                    <li>Gift Cards</li>
+                    <li>Sell</li>
+                </ul>
+
+            </div>
+
+
+        </div>
+    </section>
+    <sectioon class="sec-1">
+        <div class="container">
+            <div class="container-1">
+                <div class="product-comp">
+                    <div class="box">
+                        <h3>Gaming accessories</h3>
+                        <div class="box-a">
+                            <div>
+                                <img src="images/Fuji_Quad_Headset_2x._SY232_CB667159060_ (1).jpg">
+                                <span>Headset</span>
+                            </div>
+                            <div>
+                                <img src="images/Fuji_Quad_Keyboard_2x._SY232_CB667159063_.jpg">
+                                <span>Keyboards</span>
+                            </div>
+                            <div>
+                                <img src="images/Fuji_Quad_Mouse_2x._SY232_CB667159063_.jpg">
+                                <span>Computer mice</span>
+                            </div>
+                            <div>
+                                <img src="images/Fuji_Quad_Chair_2x._SY232_CB667159060_.jpg">
+                                <span>Chairs</span>
+
+                            </div>
+                            <a class="more" href="#">See more</a>
+
+
+
+
+                        </div>
+
+                    </div>
+
+
+                    <div class="box box-c">
+                        <h3>New year, new supplies</h3>
+
+                        <div>
+                            <img class="box-i"
+                                src="images/XCM_CUTTLE_1555947_2997386_758x608_2X_en_US._SY608_CB594429819_.jpg">
+
+                        </div>
+
+
+                        <a class="more" href="#">Shop office products</a>
+                    </div>
+
+
+
+                    <div class="box box-c">
+                        <h3>Deals in PCs</h3>
+
+                        <div>
+                            <img class="box-i" src="images/Fuji_Desktop_Single_image_EBF_2x_v1._SY608_CB573698005_.jpg">
+
+                        </div>
+
+
+                        <a class="more" href="#">Shop now</a>
+                    </div>
+
+                    <div class="box">
+                        <h3>Refresh your space</h3>
+                        <div class="box-a"> 
+                            <div>
+                                <img src="images/DesktopQuadCat_372x232_LP-HP_B08MYX5Q2W_01.23._SY232_CB619238939_.jpg">
+                                <span>Dining</span>
+                            </div>
+                            <div>
+                                <img src="images/DesktopQuadCat_372x232_home_B08RCCP3HV_01.23._SY232_CB619238939_.jpg">
+                                <span>Home</span>
+                            </div>
+                            <div>
+                                <img src="images/DesktopQuadCat_372x232_kitchen_B0126LMDFK_01.23._SY232_CB619238939_.jpg">
+                                <span>Kitchen</span>
+                            </div>
+                            <div>
+                                <img src="images/DesktopQuadCat_372x232_health-beauty_B07662GN57_01.23._SY232_CB619238939_.jpg">
+                                <span>Health and Beauty</span>
+                            </div>
+                            <a class="more" href="#">See more</a>
+
+                         </div> 
 
                     </div>
 
                 </div>
-                <div class="second-2">
-                    <ul>
-                        <li>Today's Deals</li>
-                        <li>Customer Service</li>
-                        <li>Registry</li>
-                        <li>Gift Cards</li>
-                        <li>Sell</li>
-                    </ul>
+
+            </div>
+
+
+
+
+            <div class="slider">
+                <div class="image-box">
+                    <div class="slide">
+                        <img src="images/71nwqPZaNRL._SX3000_ (1).jpg">
+
+                    </div>
+                    <div class="slide">
+                        <img src="images/61lwJy4B8PL._SX3000_.jpg">
+
+                    </div>
+                    <div class="slide">
+                        <img src="images/61zAjw4bqPL._SX3000_.jpg">
+
+                    </div>
+                    <div class="slide">
+                        <img src="images/71Ie3JXGfVL._SX3000_.jpg">
+
+                    </div>
 
                 </div>
 
-
             </div>
-        </section>
+        </div>
+
+    </sectioon>
 
 
-    </div>
+
 </body>
 
 </html>
